--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite dev",
+    "dev:client": "vite dev",
+    "dev:server": "nodemon server/index.js",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -13,17 +15,22 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-node": "^5.2.9",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@types/eslint": "^9.6.0",
+    "@types/express": "^5.0.0",
     "@types/three": "^0.170.0",
+    "@types/ws": "^8.5.13",
     "autoprefixer": "^10.4.20",
     "bits-ui": "^0.21.16",
     "clsx": "^2.1.1",
+    "concurrently": "^9.1.0",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
+    "nodemon": "^3.1.7",
     "postcss": "^8.4.49",
     "prettier": "^3.3.2",
     "prettier-plugin-svelte": "^3.2.6",
@@ -37,12 +44,13 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
-    "@dimforge/rapier3d-compat": "^0.14.0",
-    "@threlte/core": "^8.0.0-next.31",
-    "@threlte/extras": "^9.0.0-next.39",
-    "@threlte/rapier": "^3.0.0-next.16",
+    "cannon-es": "^0.20.0",
+    "express": "^4.21.1",
     "mode-watcher": "^0.5.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "svelte-radix": "^2.0.1",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "three-stdlib": "^2.34.0"
   }
 }
